force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>Holding all Patients Data.</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Patient Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>