force-app/main/default/objects/Patient__c/fields/Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Aadhar__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hold Aadhar Number of the Patient.</description>
    <externalId>true</externalId>
    <label>Aadhar No.</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>