force-app/main/default/objects/Patient__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Primary Doctor.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>patients</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>