force-app/main/default/objects/Patient__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>Days require to heal.</description>
    <label>Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>