force-app/main/default/objects/Patient__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <description>Medicines Given to Patient.</description>
    <label>Medicine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paracetamol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>