force-app/main/default/objects/Patient__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Contact Number of the Patient.</description>
    <label>Mobile No.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>