force-app/main/default/objects/Patient__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <description>Standard Symptoms were given by the doctor.</description>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>