force-app/main/default/objects/Patient__c/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <description>Actual visited Patient, Created by doctor only.</description>
    <label>Patient</label>
</RecordType>