force-app/main/default/objects/Patient__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>Self declared Patient using MeMaSys App.</description>
    <label>User</label>
</RecordType>